--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     h1, h2, h3{
         text-align: center;
     }
+    .title{
+        font-size: 45px;
+        margin-bottom: 10px;
+    }
     .container{
         background: linear-gradient(circle, #d6c4dd 0%, #a295b8 80%); 
         box-shadow: rgba(67, 2, 73, 0.25) 0px 54px 55px, rgba(67, 2, 73, 0.12) 0px -12px 30px, rgba(67, 2, 73, 0.12) 0px 4px 6px, rgba(67, 2, 73, 0.09) 0px -3px 5px;     
@@ -24,7 +28,7 @@
         flex-direction: column;
         justify-content: center;
         margin: 0 auto;
-        margin-top: 20px;
+        margin-top: 15px;
     }
     .scores{
         display: flex;
@@ -150,7 +154,7 @@
 </style>
 <body>
     <div class="container">
-        <h1>Rock Paper Scissor Game</h1>
+        <h1 class="title">Rock Paper Scissor Game</h1>
         <div class="heartContainer">
             <img src="./src/heart.png" alt="" class="heart" id="heart1">
             <img src="./src/heart.png" alt="" class="heart" id="heart2">
